[GOHW-7]: доработки по тестам и proto
